--- a/src/main/resources/templates/service/update.html
+++ b/src/main/resources/templates/service/update.html
@@ -3,7 +3,7 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar servicio</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/service/add}"
+    <form action="#" th:action="@{/service/update}"
           th:object="${object}" method="post">
         <td><input type="hidden" id="area" th:field="*{area}"></td>
         <table>
@@ -14,24 +14,49 @@
                 </select>
                 </td>
             </tr>
+            <tr th:each="err : ${#fields.errors('serviceType')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
                 <td><input type="date" id="scheduleStart" th:field="*{scheduleStart}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('scheduleStart')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="scheduleEnd">Fecha de fin</label></th>
                 <td><input type="date" id="scheduleEnd" th:field="*{scheduleEnd}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('scheduleEnd')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
             <tr>
                 <th><label for="periodStart">Hora de inicio</label></th>
                 <td><input type="time" id="periodStart" th:field="*{periodStart}"></td>
+            </tr>
+            <tr th:each="err : ${#fields.errors('periodStart')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
             </tr>
             <tr>
                 <th><label for="periodEnd">Hora de fin</label></th>
                 <td><input type="time" id="periodEnd" th:field="*{periodEnd}"></td>
             </tr>
+            <tr th:each="err : ${#fields.errors('periodEnd')}">
+                <td colspan="2">
+                    <div class="alert alert-danger" role="alert" th:text="${err}"></div>
+                </td>
+            </tr>
         </table>
-        <input type="submit" onclick="return confirm('¿Seguro que desea actualizar y los datos son correctos?')"
-               value="Actualizar servicio" class="btn btn-warning"/>Añadir servicio</td>
+        <input type="submit" onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
+               value="Actualizar servicio" class="btn btn-success"/>Actualizar servicio</td>
     </form>
 </main>
