--- a/src/main/resources/templates/controlStaff/update.html
+++ b/src/main/resources/templates/controlStaff/update.html
@@ -3,8 +3,8 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar datos del ciudadano o de la ciudadana</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/control-staff/update}"
-          th:object="${object}" method="post">
+    <form
+            th:object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
