--- a/src/main/resources/templates/areaPeriod/update.html
+++ b/src/main/resources/templates/areaPeriod/update.html
@@ -3,8 +3,8 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar horario</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/areaPeriod/update}"
-          th:object="${object}" method="post">
+    <form
+            th:object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="scheduleStart">Fecha de inicio</label></th>
