--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -3,8 +3,8 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Dar de alta ciudadano/ciudadana</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/citizen/add}"
-          th:object="${object}" method="post">
+    <form
+            th:object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="identification">Identificación</label></th>
