--- a/src/main/resources/templates/zone/add.html
+++ b/src/main/resources/templates/zone/add.html
@@ -3,8 +3,8 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Añadir Zona</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/zone/add}"
-          th:object="${object}" method="post">
+    <form
+            th:object="${object}" method="post">
         <table>
             <tr>
                 <th><label for="name">Nombre</label></th>
