--- a/src/main/resources/templates/citizen/update.html
+++ b/src/main/resources/templates/citizen/update.html
@@ -73,8 +73,8 @@
                 </td>
             </tr>
         </table>
-        <input onclick="return confirm('¿Seguro que quiere actualizar los datosy los datos son correctos?')"
-               type="submit" value="Actualizar datos" class="btn btn-warning"
+        <input onclick="return confirm('¿Seguro que quiere actualizar los datos y los datos son correctos?')"
+               type="submit" value="Actualizar" class="btn btn-warning"
         /></td>
     </form>
 </main>
