--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Dar de alta personal de control</span>
+<span layout:fragment="title">Añadir personal de control</span>
 <main layout:fragment="content">
     <form
             th:object="${object}" method="post">
