--- a/src/main/resources/templates/citizen/add.html
+++ b/src/main/resources/templates/citizen/add.html
@@ -74,7 +74,7 @@
             </tr>
         </table>
         <input onclick="return confirm('¿Seguro que quiere darse de alta y los datos son correctos?')"
-               type="submit" value="Dar de alta ciudadano/ciudadana" class="btn btn-success"
+               type="submit" value="Dar de alta" class="btn btn-success"
         /></td>
     </form>
 </main>
