--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -24,6 +24,6 @@
                 </td>
             </tr>
         </table>
-        <input class="btn btn-success" type="submit"/>
+        <input class="btn btn-success" type="submit" value="Iniciar sesión"/>
     </form>
 </main>
