--- a/src/main/resources/templates/reservation/update.html
+++ b/src/main/resources/templates/reservation/update.html
@@ -46,7 +46,7 @@
             </tr>
         </table>
         <input
-                onclick="return confirm('¿Seguro que desea realizar la reserva y los datos son correctos?')"
+                onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
                 type="submit" value="Actualizar" class="btn btn-warning"/>
     </form>
 </main>
