--- a/src/main/resources/templates/zone/update.html
+++ b/src/main/resources/templates/zone/update.html
@@ -26,7 +26,7 @@
                 </td>
             </tr>
         </table>
-        <input type="submit" onclick="return confirm('¿Seguro que desea actualizar la zona y los datos son correctos?')"
+        <input type="submit" onclick="return confirm('¿Seguro que desea actualizar los datos y los datos son correctos?')"
                value="Actualizar" class="btn btn-warning"/>Actualizar zona</td>
     </form>
 </main>
