--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -7,11 +7,11 @@
     </ul>
     <ul class="navbar-nav" th:object="${session}">
         <li class="nav-item"><a class="nav-link" th:if="*{user == null}" th:href="@{/add}">Iniciar sesión</a></li>
-        <li class="nav-item"><a class="nav-link" th:if="*{session.user instanceof T(app.model.Citizen)}" th:href="@{/citizen/list}">Gestión del usuario</a>
+        <li class="nav-item"><a class="nav-link" th:if="*{user instanceof T(app.model.Citizen)}" th:href="@{/citizen/list}">Gestión del usuario</a>
         </li>
-        <li class="nav-item"><a class="nav-link" th:if="*{session.user instanceof T(app.model.ControlStaff)}" th:href="@{/control-staff/list}">Gestión del usuario</a>
+        <li class="nav-item"><a class="nav-link" th:if="*{user instanceof T(app.model.ControlStaff)}" th:href="@{/control-staff/list}">Gestión del usuario</a>
         </li>
-        <li class="nav-item"><a class="nav-link" th:if="*{session.user instanceof T(app.model.MunicipalManager)}" th:href="@{/municipal-manager/list}">Gestión del usuario</a>
+        <li class="nav-item"><a class="nav-link" th:if="*{user instanceof T(app.model.MunicipalManager)}" th:href="@{/municipal-manager/list}">Gestión del usuario</a>
         </li>
         <li class="nav-item"><a class="nav-link" th:if="*{user != null}" th:href="@{/delete}">Cerrar sesión</a></li>
     </ul>
