--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Inicio de sesion</span>
+<span layout:fragment="title">Inicio de sesión</span>
 <main layout:fragment="content">
     <form th:object="${object}" method="post">
         <table>
