--- a/src/main/resources/templates/reservation/list.html
+++ b/src/main/resources/templates/reservation/list.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Tus reservas</span>
+<span layout:fragment="title" th:if="*{session.user instanceof T(app.model.Citizen)}" >Tus reservas</span>
+<span layout:fragment="title"
+      th:unless="*{session.user instanceof T(app.model.Citizen)}"
+      th:text="'Reservas de ' + ${data[0].area.name} + ' (' + ${data[0].municipality.name} + ')'">
+</span>
 <main layout:fragment="content">
     <table class="table table-striped">
         <thead>
