--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -16,8 +16,7 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="3">No hay ningun municipio registrado
-            <td>
+            <td colspan="3">No hay ningun municipio registrado</td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.name}"></td>
