--- a/src/main/resources/templates/citizen/list.html
+++ b/src/main/resources/templates/citizen/list.html
@@ -20,8 +20,7 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="10">No hay ningún ciudadano registrado
-            <td>
+            <td colspan="10">No hay ningún ciudadano registrado</td>
         </tr>
         <tr th:each="object: ${objects}">
             <td th:text="*{object.id}"></td>
