--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -20,8 +20,7 @@
         </thead>
         <tbody>
         <tr th:if="${#lists.isEmpty(object)}">
-            <td colspan="7">No hay ninguna área registrada
-            <td>
+            <td colspan="7">No hay ninguna área registrada</td>
         </tr>
         <tr th:each="object: ${object}">
             <td th:text="*{object.name}"></td>
