--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title" th:text="'Areas de ' + ${data[0].municipality.name}"></span>
+<span layout:fragment="title" th:text="'Áreas de ' + ${data[0].municipality.name}"></span>
 <main layout:fragment="content">
     <table class="table table-striped">
         <thead>
@@ -11,7 +11,7 @@
             <th>Tipo</th>
             <th>Descripción</th>
             <th>Localización</th>
-            <th>Imagen</th>
+            <th th:if="${session.user instanceof T(app.model.MunicipalManager)}">Imagen</th>
             <th>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager)}" href="add" class="btn btn-success"
                    role="button">Añadir área</a>
@@ -28,7 +28,7 @@
             <td th:text="*{object.type.name}"></td>
             <td th:text="*{object.description}"></td>
             <td th:text="*{object.location}"></td>
-            <td><a th:href="*{object.image}" th:text="*{object.image}" target="_blank"></a></td>
+            <td><a th:href="*{object.image}" th:text="*{object.image}" target="_blank" th:if="${session.user instanceof T(app.model.MunicipalManager)}"></a></td>
             <td>
                 <a th:href="@{/area-period/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver
                     Horarios</a>
