--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -31,10 +31,10 @@
                     personal
                 </a>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
-                   th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                   th:href="@{/area-period/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager)}"
-                   th:href="@{delete/{id}(id=${object.id})}"
+                   th:href="@{/area-period/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea eliminar el horario?')" class="btn btn-danger"
                    role="button">Eliminar
                 </a>
