Cambios en vistas

--- a/src/main/resources/templates/municipalManager/list.html
+++ b/src/main/resources/templates/municipalManager/list.html
@@ -29,9 +29,14 @@
             <td th:text="*{object.municipality.name}"></td>
             <td th:text="*{object.phone}"></td>
             <td th:text="*{object.toSignString}"></td>
-            <td><a th:href="@{delete/{id}(id=${object.id})}"
+            <td>
+                <a th:if="${session.user instanceof T(app.model.EnviromentalManager)}"
+                   th:href="@{/municipal-manager/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                </a>
+                <a th:href="@{/municipal-manager/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja al gestor municipal?')"
-                   class="btn btn-danger" role="button" th:if="*{object.active}">Dar de baja</a></td>
+                   class="btn btn-danger" role="button" th:if="*{object.active}">Dar de baja</a>
+            </td>
         </tr>
         </tbody>
     </table>
