--- a/src/main/resources/templates/municipality/list.html
+++ b/src/main/resources/templates/municipality/list.html
@@ -24,10 +24,10 @@
             <td>
                 <a th:href="@{/area/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver areas</a>
                 <a th:if="${session.user instanceof T(app.model.MunicipalManager) and session.user.municipality == object.id}"
-                   th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                   th:href="@{/municipality/update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
                 </a>
                 <a th:if="${session.user instanceof T(app.model.EnviromentalManager)}"
-                   th:href="@{delete/{id}(id=${object.id})}"
+                   th:href="@{/municipality/delete/{id}(id=${object.id})}"
                    onclick="return confirm('¿Seguro que desea dar de baja el municipio?')"
                    class="btn btn-danger" role="button">Dar de baja municipio
                 </a>
